<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context="RegisterActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/iv_logo"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:layout_marginTop="40dp"
            android:contentDescription="@null"
            android:src="@drawable/dog" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="30dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="30dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="40dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/username_font_icon"
                android:layout_width="30dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/fa_user_o"
                android:textColor="@color/green"
                android:textSize="24sp" />

            <EditText
                android:id="@+id/et_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginStart="30dp"
                android:hint="@string/username"
                android:paddingEnd="5dp"
                android:paddingLeft="20dp"
                android:paddingRight="5dp"
                android:paddingStart="20dp"
                android:shadowColor="@color/orange" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="30dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="30dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/email_font_icon"
                android:layout_width="30dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/fa_envelope_o"
                android:textColor="@color/green"
                android:textSize="24sp" />

            <EditText
                android:id="@+id/et_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginStart="30dp"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:paddingEnd="5dp"
                android:paddingLeft="20dp"
                android:paddingRight="5dp"
                android:paddingStart="20dp"
                android:shadowColor="@color/orange" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="30dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="30dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/phone_font_icon"
                android:layout_width="30dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/fa_phone"
                android:textColor="@color/green"
                android:textSize="24sp" />

            <EditText
                android:id="@+id/et_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginStart="30dp"
                android:hint="@string/phone"
                android:inputType="phone"
                android:paddingEnd="5dp"
                android:paddingLeft="20dp"
                android:paddingRight="5dp"
                android:paddingStart="20dp"
                android:shadowColor="@color/orange" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="30dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="30dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="25dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/country_font_icon"
                android:layout_width="30dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/fa_globe"
                android:textColor="@color/green"
                android:textSize="24sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="5dp"
                android:layout_marginStart="32dp"
                android:orientation="vertical">

                <Spinner
                    android:id="@+id/sp_countries"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.75dp"
                    android:background="@color/black" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="30dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="30dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="30dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/city_font_icon"
                android:layout_width="30dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/fa_city"
                android:textColor="@color/green"
                android:textSize="24sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="5dp"
                android:layout_marginStart="32dp"
                android:orientation="vertical">

                <Spinner
                    android:id="@+id/sp_cities"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.75dp"
                    android:background="@color/black" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="30dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="30dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="30dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/state_font_icon"
                android:layout_width="30dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/fa_state"
                android:textColor="@color/green"
                android:textSize="24sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="5dp"
                android:layout_marginStart="32dp"
                android:orientation="vertical">

                <Spinner
                    android:id="@+id/sp_states"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.75dp"
                    android:background="@color/black" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="30dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="30dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/password_font_icon"
                android:layout_width="30dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/fa_lock_o"
                android:textColor="@color/green"
                android:textSize="24sp" />

            <EditText
                android:id="@+id/et_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginStart="30dp"
                android:hint="@string/password"
                android:inputType="text"
                android:paddingEnd="5dp"
                android:paddingLeft="20dp"
                android:paddingRight="5dp"
                android:paddingStart="20dp"
                android:shadowColor="@color/orange" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="30dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="30dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/retype_password_font_icon"
                android:layout_width="30dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/fa_lock_o"
                android:textColor="@color/green"
                android:textSize="24sp" />

            <EditText
                android:id="@+id/et_retype_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginStart="30dp"
                android:hint="@string/retype_password"
                android:inputType="text"
                android:paddingEnd="5dp"
                android:paddingLeft="20dp"
                android:paddingRight="5dp"
                android:paddingStart="20dp"
                android:shadowColor="@color/orange" />
        </LinearLayout>

        <!--<LinearLayout-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_marginEnd="30dp"-->
        <!--android:layout_marginLeft="20dp"-->
        <!--android:layout_marginRight="30dp"-->
        <!--android:layout_marginStart="20dp"-->
        <!--android:layout_marginTop="20dp"-->
        <!--android:orientation="horizontal">-->

        <!--<TextView-->
        <!--android:id="@+id/country_font_icon"-->
        <!--android:layout_width="30dp"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:gravity="center"-->
        <!--android:text="@string/fa_globe"-->
        <!--android:textColor="@color/green"-->
        <!--android:textSize="24sp" />-->

        <!--<Spinner-->
        <!--android:id="@+id/sp_countries"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_marginLeft="30dp"-->
        <!--android:layout_marginStart="32dp"-->
        <!--android:paddingTop="10dp" />-->

        <!--</LinearLayout>-->

        <!--<View-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="0.75dp"-->
        <!--android:layout_marginEnd="35dp"-->
        <!--android:layout_marginLeft="83dp"-->
        <!--android:layout_marginRight="35dp"-->
        <!--android:layout_marginStart="83dp"-->
        <!--android:background="@color/black" />-->

        <ProgressBar
            android:id="@+id/progress_bar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone" />

        <Button
            android:id="@+id/create_account"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="20dp"
            android:layout_marginEnd="40dp"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:layout_marginStart="40dp"
            android:layout_marginTop="40dp"
            android:background="@drawable/rounded_background"
            android:text="@string/register"
            android:textAllCaps="false"
            android:textColor="@color/orange"
            android:textStyle="bold" />


    </LinearLayout>
</ScrollView>
